# sufdb

./: .gitignore  Cargo.toml  README.md
src/: btree.rs  db.rs  main.rs
