[package]
name = "sufdb"
version = "0.1.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Command line tool for searching documents with suffix arrays."
homepage = "https://github.com/BurntSushi/sufdb"
repository = "https://github.com/BurntSushi/sufdb"
readme = "README.md"
keywords = ["suffix", "text", "search", "index", "database"]
license = "Unlicense"

[[bin]]
name = "sufdb"
path = "src/main.rs"
doc = false
test = false
bench = false

[profile.release]
opt-level = 3
lto = true

[dependencies]
cbor = "*"
docopt = "*"
rustc-serialize = "*"
suffix = "*"
