[package]
name = "sufdb"
version = "0.1.7"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Command line tool for searching documents with suffix arrays."
homepage = "https://github.com/BurntSushi/sufdb"
repository = "https://github.com/BurntSushi/sufdb"
readme = "README.md"
keywords = ["suffix", "text", "search", "index", "database"]
license = "Unlicense/MIT"

[lib]
# name = "sufdb-tree"
name = "sufdb_tree" # temporary
path = "src/btree.rs"
doc = false

# [[bin]]
# name = "sufdb"
# path = "src/main.rs"
# doc = false
# test = false
# bench = false

[profile.release]
opt-level = 3
lto = true

[dependencies]
# cbor = "*"
# docopt = "*"
# rustc-serialize = "0.2.0"
suffix = "*"

# [dependencies.suffix]
# version = "*"
# path = "/home/andrew/data/projects/rust/suffix"
